2011-02-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXBestFont): Check for a few more common
	font names, and ensure to always check for "fixed" as a final
	fallback.

2011-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/delegates.mgk.in: Added gs-cmyk entry.  Used if '-type
	ColorSeparation' is specified on the command-line prior to the PDF
	or Postscript file name.  This entry specifies use of the
	Ghostscript PAM driver which is capable of supporting CMYK output.
	This may be useful if it is desired to apply CMYK color profiles
	to the image returned from the PDF.  As fair warning, it seems
	that Ghostscript 8.62 outputs CMYK even if the PDF was in RGB
	space if the PAM driver is used.

	* coders/pnm.c (ReadPNMImage): Add support for reading netpbm's
	PAM format.

2011-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.c, tests/rwfile.c: Fixes to help tests work when
	testing with multiple frames.

	* coders/sgi.c: SGI format is not documented to support multiple
	frames.  Remove the half-baked extension for it.

2011-02-01  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/bmp.c (ReadBMPImage): Changed file_size greater than
	expected from a corrupt-image error to a debug log entry.
	File_size too small is still an error, and made that so also for
	BI_RGB images which were previously exempted from the test.

2011-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.c, tests/rwfile.c: Validate the data in each image
	frame, validate that each read returns the same number of frames,
	and validate that the correct number of frames was ultimately
	returned.

	* magick/blob.c (SyncBlob): Disable bogus code which attempted to
	replicate the blob I/O object across all images in the list when
	the blob is synced.  Leave a less bogus bit of code in place (but
	commented out) in case such functionality is deemed to actually be