@@ -51,6 +51,16 @@
 <div class="document">
 
 
+<p>2011-02-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pnm.c (ReadPNMImage): Fix mis-placed break in PAM header
+parser.</li>
+<li>wand/magick_wand.c (MagickWriteImageBlob): Improve the
+documentation to mention the related use of MagickSetImageFormat()
+and MagickResetIterator().</li>
+</ul>
+</blockquote>
 <p>2011-02-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
@@ -144,7 +154,7 @@ string, even if it is assured to fit.</li>
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2011-02-08 02:33 UTC.
+Generated on: 2011-02-14 00:08 UTC.
 
 </div>
 </body>
